[package]
name = "carbon-ws"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0

[dependencies]
chrono = {version = "0.4.41", features = ["serde"]}
diesel = {version = "2.2.12", features = ["r2d2", "chrono", "postgres", "serde_json", "uuid"]}
dotenvy = "0.15.7"
futures-util = "0.3.31"
identicon-rs = "7.0.1"
image = "0.25.8"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
reqwest = "0.12.23"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
uuid = {version = "1.18.1", features = ["v4","serde"]}
warp = {version = "0.4.2", features = ["websocket", "server"]}
